--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="saving_tip">Saving Tip</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome">Welcome</string>
+    <string name="welcomedesc">Login to unBroke</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgotpass">Forgot Password?</string>
+    <string name="login">Login</string>
+    <string name="noacc">Dont have account?</string>
+    <string name="createacc">Create Now!</string>
 </resources>
