--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,9 @@
     <string name="otp">Send OTP</string>
     <string name="textview">TextView</string>
     <string name="total_daily_balance">Total Daily Balance</string>
+    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
+    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
+    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
     
     <string name="hyperlinkInvest"> <a href="https://www.strawberryinvest.com/knowledge-hub/top-10-tips-for-first-time-investors/">learn more</a></string>
     <string name="hyperlinkEmergency"><a href="https://www.wellsfargo.com/financial-education/basic-finances/manage-money/cashflow-savings/emergencies/">learn more</a></string>
