--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">Welcome</string>
-    <string name="welcomedesc">Login to unBroke</string>
+    <string name="welcomedesc">Login to UnBroke</string>
     <string name="email">Email</string>
     <string name="emailadd">Email address</string>
     <string name="password">Password</string>
