--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="enteremail">Enter your email</string>
     <string name="othermethod">Choose another method</string>
     <string name="help">Need help?</string>
-    <string name="otp">Send OTP</string>
+    <string name="otp">Send code</string>
     <string name="textview">TextView</string>
     <string name="total_daily_balance">Total Daily Balance</string>
     <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
